<resources>
    <string name="app_name">Paperboy3</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Paperboy3 Settings</string>

    <string name="settings_search_term_label">Search Term</string>
    <string name="settings_search_term_key" translatable="false">query</string>
    <string name="settings_search_term_default" translatable="false"></string>

    <string name="settings_page_size_label">Articles per Search</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">10</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="settings_section_order_by_newest_label">Newest</string>
    <string name="settings_section_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_section_order_by_oldest_label">Oldest</string>
    <string name="settings_section_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_section_order_by_relevance_label">Relevance</string>
    <string name="settings_section_order_by_relevance_value" translatable="false">relevance</string>


    <string name="settings_api_key_label">API Key</string>
    <string name="settings_api_key_key_" translatable="false">api_key</string>
    <string name="settings_api_key_default" translatable="false">test</string>

    <string name="settings_section_name_label">Section Name</string>
    <string name="settings_section_name_key" translatable="false">section_name</string>
    <string name="settings_section_name_default" translatable="false"></string>
    <string name="settings_section_any_label">Any</string>
    <string name="settings_section_any_value" translatable="false"></string>
    <string name="settings_section_world_label">World</string>
    <string name="settings_section_world_value" translatable="false">world</string>
    <string name="settings_section_technology_label">Technology</string>
    <string name="settings_section_technology_value" translatable="false">technology</string>
    <string name="settings_section_business_label">Business</string>
    <string name="settings_section_business_value" translatable="false">business</string>
    <string name="settings_section_money_label">Money</string>
    <string name="settings_section_money_value" translatable="false">money</string>
    <string name="settings_section_travel_label">Travel</string>
    <string name="settings_section_travel_value" translatable="false">travel</string>
    <string name="settings_section_society_label">Society</string>
    <string name="settings_section_society_value" translatable="false">society</string>
    <string name="settings_section_culture_label">Culture</string>
    <string name="settings_section_culture_value" translatable="false">culture</string>
    <string name="settings_section_books_label">Books</string>
    <string name="settings_section_books_value" translatable="false">books</string>
    <string name="settings_section_opinion_label">Opinion</string>
    <string name="settings_section_opinion_value" translatable="false">opinion</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_articles">No articles found</string>
    <string name="list_error">Error Creating List</string>

</resources>
