<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_search_term_default"
        android:inputType="textPersonName"
        android:key="@string/settings_search_term_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_term_label"/>

    <ListPreference
        android:defaultValue="@string/settings_section_name_default"
        android:entries="@array/settings_section_names_labels"
        android:entryValues="@array/settings_section_names_values"
        android:key="@string/settings_section_name_key"
        android:title="@string/settings_section_name_label"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_label"/>

    <EditTextPreference
        android:defaultValue="@string/settings_api_key_default"
        android:inputType="textPersonName"
        android:key="@string/settings_api_key_key_"
        android:selectAllOnFocus="true"
        android:title="@string/settings_api_key_label"/>


</PreferenceScreen>